Can now edit artist and album on songs.